--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -24168,10 +24168,10 @@ hr.horizontal.gray-light {
     margin: 0;
 }
 
-.table td,
+/* .table td,
 .table th {
     white-space: nowrap;
-}
+} */
 
 .table.align-items-center td,
 .table.align-items-center th {
